package com.whm.githubapp.model

data class GitHubRepoResponse(
    val items: List<GitHubRepo>
)